<resources>
    <string name="app_name">Woof-woof</string>
    <string name="walk_title">Выгул</string>
    <string name="health_title">Здоровье</string>
    <string name="home_title">Собака</string>
    <string name="tools_title">Инструменты</string>
    <string name="training_title">Обучение</string>
    <string name="clicker">Кликер</string>
    <string name="whistle">Свисток</string>
    <string name="change">Редактировать</string>
    <string name="notifications">Напоминания</string>
    <string name="new_notification">Добавить напоминание</string>
    <string name="choose_notification">Выберите тип напоминания:</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="add">Добавить</string>
    <string name="create">Создать</string>
    <string name="delete">Удалить</string>
    <string name="back">Назад</string>
    <string name="name">Кличка</string>
    <string name="age">Возраст</string>
    <string name="breed">Порода</string>
    <string name="sex">Пол</string>
    <string name="years">Годы</string>
    <string name="months">Месяцы</string>
    <string name="symbols_max_15">Максимум 15 символов</string>
    <string name="symbols_max_30">Максимум 30 символов</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="submit_registration">Завершить регистрацию</string>
    <string name="warning">Завершая регистрацию, я соглашаюсь с правилами пользования приложением и политикой конфиденциальности</string>
    <string name="bath">Умывание</string>
    <string name="vaccine">Прививка</string>
    <string name="vet">Ветеринар</string>
    <string name="ear">Чистка ушей</string>
    <string name="tooth">Чистка зубов</string>
    <string name="worm">От глистов</string>
    <string name="scissors">Груминг</string>
    <string name="mite">От клещей</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="description">Описание</string>
    <string name="when">Когда:</string>
    <string name="description1">Описание:</string>
    <string name="no_notifications">Напоминаний пока нет</string>
    <string name="no_walks">Сегодня вы еще не гуляли </string>
    <string name="walks">Выгулы</string>
    <string name="addWalk">Добавить выгул</string>
    <string name="recommendation">Рекомендации по выгулу</string>
    <string name="you_walked">Вы нагуляли:</string>
    <string name="add_walk">Добавить выгул вручную</string>
    <string name="start_walk">Начать выгул сейчас</string>
    <string name="stop_walk">Все! Нагулялись!</string>
    <string name="start">Начало</string>
    <string name="end">Конец</string>
    <string name="to_walk">Начать</string>

</resources>