<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.ChangeProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="top">

        <ImageView
            android:id="@+id/titleBackgroundImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/main_title_bg"/>

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerVertical="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/profile_image" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:layout_marginLeft="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginBottom="10dp"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameField"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:maxLength="15"
            android:hint="@string/symbols_max_15"
            android:breakStrategy="simple"
            android:hyphenationFrequency="none"
            android:textSize="12sp"
            android:background="@drawable/edit_text_style"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breed"
            android:layout_marginBottom="10dp"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/breedField"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:maxLength="30"
            android:hint="@string/symbols_max_30"
            android:breakStrategy="simple"
            android:hyphenationFrequency="none"
            android:textSize="12sp"
            android:background="@drawable/edit_text_style"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:layout_marginBottom="5dp"
            android:textSize="17sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">
            <RadioButton
                android:text="Мужской"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingTop="10dp"
                android:id="@+id/rb_male" />

            <RadioButton
                android:text="Женский"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/rb_female" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:layout_marginBottom="10dp"
            android:textSize="17sp"
            android:textStyle="bold" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/years"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:layout_row="0"
                android:layout_column="0"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/months"
                android:layout_row="0"
                android:layout_column="1"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/yearsField"
                android:layout_height="25dp"
                android:layout_width="65dp"
                android:inputType="number"
                android:layout_row="1"
                android:layout_column="0"
                android:maxLength="2"
                android:max="12"
                android:background="@drawable/edit_text_style"/>

            <EditText
                android:id="@+id/monthsField"
                android:layout_height="25dp"
                android:layout_width="65dp"
                android:inputType="number"
                android:layout_row="1"
                android:layout_column="1"
                android:maxLength="2"
                android:max="30"
                android:background="@drawable/edit_text_style"/>

        </GridLayout>

    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/buttons_style"
        android:text="@string/save"/>

</LinearLayout>