<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".health.AddNotificationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="top">

        <com.google.android.material.imageview.ShapeableImageView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            android:id="@+id/titleBackgroundImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/main_title_bg" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/new_notification"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/date"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="6dp"
            android:paddingLeft="7dp"
            android:inputType="date"
            android:background="@drawable/edit_text_style"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/time"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="6dp"
            android:paddingLeft="7dp"
            android:inputType="time"
            android:background="@drawable/edit_text_style"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/description"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginTop="6dp"
            android:paddingLeft="7dp"
            android:inputType="text"
            android:maxLength="300"
            android:hint="@string/description"
            android:breakStrategy="simple"
            android:hyphenationFrequency="none"
            android:textSize="15sp"
            android:background="@drawable/edit_text_style"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:textColor="@color/white"
        android:id="@+id/createButton"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:text="@string/create"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="12dp"
        android:background="@drawable/buttons_style"/>

    <androidx.appcompat.widget.AppCompatButton
        android:textColor="@color/white"
        android:id="@+id/backButton"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:text="@string/back"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textSize="12dp"
        android:background="@drawable/grey_button"/>


</LinearLayout>