<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".health.EditNotificationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginStart="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="22dp"
            android:textColor="@color/blue"
            android:text="@string/vet"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="@string/date"/>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_marginTop="6dp">

            <EditText
                android:id="@+id/day_upd"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:hint="DD"
                android:inputType="number"
                android:maxLength="2"
                android:background="@drawable/edit_text_style"/>

            <TextView
                android:layout_marginStart="3dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="."
                android:textSize="25sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/month_upd"
                android:layout_marginStart="3dp"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:hint="MM"
                android:inputType="number"
                android:maxLength="2"
                android:background="@drawable/edit_text_style"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="@string/time"/>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_marginTop="6dp">

            <EditText
                android:id="@+id/hours_upd"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:inputType="number"
                android:maxLength="2"
                android:background="@drawable/edit_text_style"/>

            <TextView
                android:layout_marginStart="3dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text=":"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/minutes_upd"
                android:layout_marginStart="3dp"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:inputType="number"
                android:maxLength="2"
                android:background="@drawable/edit_text_style"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="@string/description"/>

        <EditText
            android:id="@+id/description_upd"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginTop="6dp"
            android:paddingLeft="7dp"
            android:paddingTop="7dp"
            android:gravity="top|start"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="300"
            android:breakStrategy="simple"
            android:hyphenationFrequency="none"
            android:textSize="15sp"
            android:background="@drawable/edit_text_style"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:textColor="@color/white"
        android:id="@+id/updateButton"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:text="@string/save"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="12dp"
        android:background="@drawable/buttons_style"/>

    <androidx.appcompat.widget.AppCompatButton
        android:textColor="@color/white"
        android:id="@+id/deleteButton"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:text="@string/delete"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textSize="12dp"
        android:background="@drawable/red_button" />

</LinearLayout>