<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="top">

        <ImageView
            android:id="@+id/titleBackgroundImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/main_title_bg"/>

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerVertical="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/profile_image" />

    </RelativeLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_row="0"
            android:layout_column="0"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Борис"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginBottom="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:layout_row="1"
            android:layout_column="0"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3 года 10 месяцев"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginBottom="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breed"
            android:layout_row="2"
            android:layout_column="0"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="30dp" />

        <TextView
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="Американский стаффордширский йорктерьер"
            android:layout_row="2"
            android:layout_column="1"
            android:breakStrategy="simple"
            android:hyphenationFrequency="none"
            android:layout_marginBottom="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:layout_row="3"
            android:layout_column="0"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="М"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_marginBottom="25dp" />
    </GridLayout>

    <Button
        android:id="@+id/changeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/change"
        android:layout_gravity="center"
        android:background="@drawable/buttons_style"/>

</LinearLayout>