<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tools.ToolsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="top">

        <com.google.android.material.imageview.ShapeableImageView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            android:id="@+id/titleBackgroundImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/main_title_bg"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/tools_title"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <FrameLayout
        android:id="@+id/toolsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="bottom">

        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/white"
            android:id="@+id/clicker_button"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:background="@drawable/gradient_green"
            android:text="@string/clicker"
            app:layout_constraintEnd_toStartOf="@+id/whistle_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/white"
            android:id="@+id/whistle_button"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:background="@drawable/gradient_blue"
            android:text="@string/whistle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/clicker_button"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>